[package]
name = "rattler_index"
version = "0.27.11"
edition.workspace = true
authors = []
description = "A crate to index conda channels and create a repodata.json file."
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
default-run = "rattler-index"

[features]
default = ["rustls", "s3", "rattler_config"]
native-tls = [
  "reqwest/native-tls",
  "rattler_package_streaming/native-tls",
  "rattler_networking/native-tls",
  "rattler_s3?/native-tls",
]
rustls = [
  "reqwest/rustls",
  "rattler_package_streaming/rustls",
  "rattler_networking/rustls",
  "rattler_s3?/rustls",
]
s3 = ["opendal/services-s3", "dep:rattler_s3"]
rattler_config = ["dep:rattler_config"]

[[bin]]
name = "rattler-index"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
console = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
opendal = { workspace = true, features = [
  "services-fs",
], default-features = false }
rattler_config = { workspace = true, optional = true }
rattler_networking = { workspace = true, default-features = false, features = [
  "system-integration",
] }
rattler_conda_types = { workspace = true, default-features = false }
rattler_digest = { workspace = true, default-features = false }
rattler_package_streaming = { workspace = true, default-features = false }
rattler_s3 = { workspace = true, optional = true, features = ["clap"] }
reqwest = { workspace = true, default-features = false, features = [
  "http2",
  "charset",
] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
url = { workspace = true }
zstd = { workspace = true }
retry-policies = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tools = { path = "../tools", default-features = false }
