[package]
name = "rattler_libsolv_c"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "Bindings for libsolv"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
libc = { version = "0.2" }
libz-sys = { version = "1.1.12", default-features = false, features = ["static"] }
cfg-if = "1.0.0"

[build-dependencies]
anyhow = "1.0.75"
# 1.0.84 would fail to compile this library specifically on macOS. 
# For now we just pin an older version.
cc = "=1.0.83"
cmake = "0.1.50"

[package.metadata.cargo-udeps.ignore]
# libz-sys is required to build libsolv properly
normal = ["libz-sys"]
