[package]
name = "rattler_libsolv_c"
version = "1.0.3"
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "Bindings for libsolv"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
cfg-if = { workspace = true }
libc = { workspace = true }
libz-sys = { workspace = true, features = ["static"] }

[build-dependencies]
anyhow = { workspace = true }
# 1.0.84 would fail to compile this library specifically on macOS. 
# For now we just pin an older version.
cc = "1.1.31"
cmake = { workspace = true }

[package.metadata.cargo-udeps.ignore]
# libz-sys is required to build libsolv properly
normal = ["libz-sys"]
