[package]
name = "rattler_libsolv_c"
version = "1.2.0"
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "Bindings for libsolv"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
cfg-if = { workspace = true }
libc = { workspace = true }
libz-sys = { workspace = true, features = ["static"] }

[build-dependencies]
anyhow = { workspace = true }
cc = "1.2.14"
cmake = { workspace = true }

[package.metadata.cargo-udeps.ignore]
# libz-sys is required to build libsolv properly
normal = ["libz-sys"]
